mariadb_deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  ports:
  - port: 3306
  selector:
    app: mariadb
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: mariadb
    type: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.5.8-focal
        args:
        # if we deploy on a block device make sure mysql doesn't think lost+found is db folder
          - "--ignore-db-dir=lost+found"
        resources:
          requests:
            memory: "512Mi"
            cpu: "600m"
          limits:
            memory: "512Mi"
            cpu: "800m"
        ports:
        - containerPort: 3306
        livenessProbe:
          tcpSocket:
            port: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mariadb-persistent-storage
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: maria-pvc
