wp-nfs.yaml
---
apiVersion: v1
kind: Service
metadata:
  name:  wp-service
spec:
  selector:
    app: wp
  type: ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp
  labels:
    app: wp
    type: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wp
  template:
    metadata:
      labels:
        app: wp
    spec:
      containers:
      - name: wp
        image: wordpress:5.5.1 # Very important
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 30
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "156Mi"
            cpu: "300m"
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /var/www/html
            name: wordpress-persistent-storage
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-nfs-pvc
