wp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wp-ingress
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m #for uploads
spec:
  tls:
  - hosts:
    - www.fabianbrash.com
    - fabianbrash.com
    secretName: tlssecret
  rules:
  - host: fabianbrash.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wp-service
          servicePort: 80
      #- path: /coffee
      #  backend:
      #    serviceName: coffee-svc
      #    servicePort: 80
